todo project end

--- a/index.html
+++ b/index.html
@@ -6,33 +6,40 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<link rel="stylesheet" href="css/style.css" />
 	<title>Momentum App</title>
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
 <body>
-	<h2 id="clock">00:00:00</h2>
-	<form class="hidden" id="login-form">
+	<h2 id="clock" class="clock">00:00:00</h2>
+	<div id="weather" class="weather">
+		<span></span>
+		<span></span>
+	</div>
+	<form id="login-form" class="login-form hidden">
 		<input required maxlength="15" type="text" placeholder="What is your name?" />
 		<input type="submit" value="Log In" />
 	</form>
-	<h1 class="hidden" id="greeting"></h1>
-	<form id="todo-form">
+	<h1 id="greeting" class="greeting hidden"></h1>
+	<form id="todo-form" class="todo-form hidden" >
 		<input type="text" placeholder="Write a To Do and Press Enter" required />
 	</form>
-	<ul id="todo-list"></ul>
-	<div id="quote">
+	<ul id="todo-list" class="todo-list hidden"></ul>
+	<div id="quote" class="quote">
 		<span></span>
 		<span></span>
 	</div>
-	<div id="weather">
-		<span></span>
-		<span></span>
-	</div>
+	<!-- <span class="material-icons">settings</span>
+	<span class="material-icons">task_alt</span>
+	<span class="material-icons">autorenew</span>
+	<span class="material-icons">check</span>
+	<span class="material-icons">close</span>
+	<span class="material-icons">edit</span> -->
 	<script src="js/greetings.js"></script>
 	<script src="js/clock.js"></script>
 	<script src="js/quotes.js"></script>
 	<script src="js/background.js"></script>
 	<script src="js/todo.js"></script>
-	<!-- <script src="js/weather.js"></script> -->
+	<script src="js/weather.js"></script>
 </body>
 
 </html>
